Complete Menu tab

--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@ body {
     margin: 25px;
 }
 
-.landing-page-load, .menu-load, .contac-load {
+.landing-page-load, .menu-load, .contact-load {
     color: black;
     font-family: 'Gill sans', 'Gill sans MT', 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-weight: 900;
